--- a/management.html
+++ b/management.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student_Management</title>
+    <title>Student Planner</title>
+    <link rel="icon" type="image/webp" href="title_logo.webp">
 
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #2A363B;
+            /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
             margin: 0;
             height:2000px;
             padding: 20px;
