--- a/index.html
+++ b/index.html
@@ -1,162 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Planner</title>
-    <link rel="icon" type="image/webp" href="title_logo.webp">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body {
-            font-family: 'Poppins', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-            padding: 20px;
-        }
-        .login-container {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 50px;
-            border-radius: 20px;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);
-            width: 100%;
-            max-width: 480px;
-            text-align: center;
-            backdrop-filter: blur(15px);
-        }
-        .login-container h2 { margin-bottom: 30px; color: #00eaff; font-weight: 700; font-size: 32px; text-transform: uppercase; }
-        .input-group { position: relative; margin-bottom: 20px; }
-        .input-group label { display: block; text-align: left; font-size: 18px; margin-bottom: 8px; color: #fff; font-weight: 600; }
-        .input-group input {
-            width: 100%;
-            padding: 15px;
-            border: none;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.3);
-            color: #fff;
-            font-size: 18px;
-            outline: none;
-        }
-        .input-group input::placeholder { color: #ddd; font-size: 16px; }
-        .login-btn {
-            width: 100%;
-            padding: 15px;
-            background: #00bbff;
-            border: none;
-            color: black;
-            border-radius: 20px;
-            cursor: pointer;
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .login-btn:hover { background: #007fe6; }
-        .forgot-password { display: block; margin-top: 15px; font-size: 16px; color: #ddd; text-decoration: none; cursor: pointer; }
-        .forgot-password:hover { color: #c7cece; }
-        .error-message { color: red; font-size: 16px; margin-top: 12px; display: none; }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Taskify - Your Task Management Hub</title>
+  <link rel="icon" type="image/png" sizes="128x128" href="taskify-logo.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <style>
+    body {
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #e0e0e0;
+      font-family: 'Poppins', sans-serif;
+      overflow-x: hidden;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+    }
 
-        /* Forgot Password Box */
-        .forgot-box {
-            display: none;
-            margin-top: 15px;
-            padding: 15px;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 10px;
-            color: #fff;
-            text-align: left;
-        }
-        .forgot-box input { margin-right: 10px; }
-    </style>
+    .nav-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 50px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      border-radius: 0 0 20px 20px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      font-size: 24px;
+      font-weight: bold;
+      color: rgb(216, 216, 216);
+    }
+
+    .logo i {
+      margin-right: 10px;
+    }
+
+    .navigation {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 150px 20px 0;
+      flex: 1;
+    }
+
+    .welcome {
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .navigation p {
+      font-size: 18px;
+      max-width: 600px;
+      margin-bottom: 40px;
+      animation: fadeIn 2.5s ease-in-out;
+    }
+
+    .feature-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 30px;
+      animation: slideIn 3s ease-in-out;
+    }
+
+    .feature-box {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 25px;
+      border-radius: 15px;
+      backdrop-filter: blur(8px);
+      transition: 0.3s;
+      max-width: 300px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      color: #e0e0e0;
+    }
+
+    .feature-box:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: scale(1.05);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+    }
+
+    .cta-button {
+      margin-top: 40px;
+      padding: 15px 30px;
+      background-color: #00bcd4;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      color: white;
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-block;
+      font-weight: bold;
+      animation: pulse 2s infinite;
+    }
+
+    .cta-button:hover {
+      background-color: #0097a7;
+      transform: scale(1.1);
+    }
+
+    .footer {
+      background: rgba(255, 255, 255, 0.1);
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      backdrop-filter: blur(5px);
+      border-radius: 20px 20px 0 0;
+      margin-top: auto;
+      color: #e0e0e0;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideIn {
+      from { transform: translateY(50px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <h2><i class="fas fa-user-graduate"></i> Student Login</h2>
-        <div class="input-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" placeholder="Enter your username">
-        </div>
-        <div class="input-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password" autocomplete="current-password">
-        </div>
-        <button class="login-btn" onclick="validateLogin()">Login</button>
-        <a class="forgot-password" onclick="showForgotPassword()">Forgot Password?</a>
-        <p id="error-message" class="error-message">Invalid Username or Password</p>
-
-        <!-- Forgot Password Box -->
-        <div class="forgot-box" id="forgot-box">
-            <input type="checkbox" id="robot-check" onclick="revealCredentials()"> I am not a robot
-            <p id="credentials" style="display: none; margin-top: 10px;"></p>
-        </div>
+  <div class="nav-bar">
+    <div class="logo">
+      <i class="fa-solid fa-check-circle"></i><span class="brand-name"> Taskify</span>
     </div>
+  </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            let storedUsername = localStorage.getItem("username");
-            let storedPassword = localStorage.getItem("password");
+  <div class="navigation">
+    <h1 class="welcome">Welcome to Taskify – Your Task Management Hub</h1>
+    <p>Organize your tasks efficiently, track your daily progress with insightful graphs, and prioritize your to-dos to enhance productivity.</p>
+    
+    <div class="feature-container">
+      <div class="feature-box">📅 <strong>Task Management</strong><br>Add, edit, and delete tasks effortlessly.</div>
+      <div class="feature-box">📊 <strong>Daily Progress</strong><br>Visualize your productivity with intuitive graphs.</div>
+      <div class="feature-box">🔝 <strong>Prioritize Tasks</strong><br>Set top-priority tasks for better focus.</div>
+    </div>
+    
+    <a href="management.html" class="cta-button">Start Managing Tasks</a>
+  </div>
 
-            if (!storedUsername || !storedPassword) {
-                setNewUser();
-            }
-        });
-
-        function setNewUser() {
-            let newUsername = prompt("Set your username:");
-            if (!newUsername) return;
-
-            let newPassword = prompt("Set your password:");
-            if (!newPassword) return;
-
-            localStorage.setItem("username", newUsername);
-            localStorage.setItem("password", newPassword);
-            alert("Account created successfully! Please log in.");
-        }
-
-        function validateLogin() {
-            let enteredUsername = document.getElementById("username").value.trim();
-            let enteredPassword = document.getElementById("password").value.trim();
-            let errorMessage = document.getElementById("error-message");
-
-            let storedUsername = localStorage.getItem("username");
-            let storedPassword = localStorage.getItem("password");
-
-            if (enteredUsername === "" || enteredPassword === "") {
-                errorMessage.textContent = "Please fill in all fields";
-                errorMessage.style.display = "block";
-                return;
-            }
-
-            if (enteredUsername === storedUsername && enteredPassword === storedPassword) {
-                localStorage.setItem("loggedInUser", enteredUsername);
-                window.location.href = "management.html"; // Redirect after login
-            } else {
-                errorMessage.textContent = "Invalid Username or Password";
-                errorMessage.style.display = "block";
-            }
-        }
-
-        function showForgotPassword() {
-            document.getElementById("forgot-box").style.display = "block";
-        }
-
-        function revealCredentials() {
-            let checkBox = document.getElementById("robot-check");
-            let credentials = document.getElementById("credentials");
-
-            if (checkBox.checked) {
-                let storedUsername = localStorage.getItem("username") || "No user set";
-                let storedPassword = localStorage.getItem("password") || "No password set";
-
-                credentials.innerHTML = `👤 Username: <strong>${storedUsername}</strong> <br> 🔑 Password: <strong>${storedPassword}</strong>`;
-                credentials.style.display = "block";
-            } else {
-                credentials.style.display = "none";
-            }
-        }
-    </script>
+  <footer class="footer">
+    &copy; © 2025, Created with ❤️ by Satyam Tomar
+  </footer>
 </body>
 </html>
