--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taskify - Your Task Management Hub</title>
-  <link rel="icon" type="image/png" sizes="128x128" href="taskify-logo.png" />
+  <title>Daily Task Tracker</title>
+  <link rel="icon" type="image/webp" sizes="128x128" href="title_logo.webp" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -62,14 +62,14 @@
       font-size: 48px;
       font-weight: bold;
       margin-bottom: 20px;
-      animation: fadeIn 2s ease-in-out;
+      animation: fadeIn 1s ease-in-out;
     }
 
     .navigation p {
       font-size: 18px;
       max-width: 600px;
       margin-bottom: 40px;
-      animation: fadeIn 2.5s ease-in-out;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
     .feature-container {
@@ -78,7 +78,7 @@
       justify-content: center;
       gap: 30px;
       margin-top: 30px;
-      animation: slideIn 3s ease-in-out;
+      animation: slideIn 1.5s ease-in-out;
     }
 
     .feature-box {
@@ -111,7 +111,7 @@
       text-decoration: none;
       display: inline-block;
       font-weight: bold;
-      animation: pulse 2s infinite;
+      animation: pulse 2.5s infinite;
     }
 
     .cta-button:hover {
@@ -168,7 +168,7 @@
   </div>
 
   <footer class="footer">
-    &copy; © 2025, Created with ❤️ by Satyam Tomar
+    &copy; 2025, Created with ❤️
   </footer>
 </body>
 </html>
